fixed landing page from resizing and flickering Co-authored-by: qb1968 <mark.allison75@gmail.com> Co-authored-by: erik-sandoval <erik.sandoval@icloud.com>

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@ html {
   flex-direction: column;
   align-items: center;
   max-width: 1000px;
+  width: 100%;
   margin: auto;
 }
 
@@ -126,4 +127,14 @@ i:hover {
 
 .city:hover .border2 {
   display:none
+}
+
+form {
+  display: flex;
+  justify-content: center;
+}
+
+select.form-control {
+  width: 40%;
+  margin: 3% 1% 4%;
 }
